--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                                 <a href="#contact" class="text-base text-dark
                                 py-2 mx-8 flex group-hover:text-primary">Contact</a>
                             </li>
+                            <li class="group">
+                                <a href="https://storage.googleapis.com/m-faraditya-ep-com/porto-main/CV-M-Faraditya.pdf"
+                                    target="_blank" class="text-base text-dark
+                                py-2 mx-8 flex group-hover:text-primary">CV</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -325,8 +330,11 @@
                 <div class="mb-12 w-full px-4 font-medium text-slate-300 items-center">
                     <h3 class="mb-2 text-2xl font-bold">Email</h3>
                     <p>mohammadfaraditya@gmail.com</p>
+                    <a href="https://storage.googleapis.com/m-faraditya-ep-com/porto-main/CV-M-Faraditya.pdf"
+                        class="mt-10">Curriculum Vitae</a>
                     <p>Jl. Pulo Harapan Indah</p>
                     <p>Jakarta Barat</p>
+
                 </div>
 
 
